[tool.poetry]
name = "ffootball-lottery"
version = "0.1.0"
description = ""
authors = ["camrmarquis <camrmarquis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.5"
scipy = "^1.5.4"
jupyter = "^1.0.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
tabulate = "^0.8.7"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
